# Plunger

./: .gitignore  CMakeLists.txt  PLAN.md
assets/maps/: demo.json
assets/models/: cube.gltf
assets/shaders/: geometry.frag  geometry.vert  part.frag  part.vert  shadow_depth.vert  shadow_depth_part.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.h
src/game/: Character.cpp  Character.h  FlyCameraController.cpp  FlyCameraController.h
src/input/: Input.cpp  Input.h
src/physics/: Collision.h  PhysicsWorld.cpp  PhysicsWorld.h
src/renderer/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Math.h  Mesh.cpp  Mesh.h  OpenGLFunctions.cpp  OpenGLFunctions.h  PartRenderer.cpp  PartRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/scene/: Components.h  Entity.h  GltfModel.cpp  GltfModel.h  ModelLoader.cpp  ModelLoader.h  PartMapLoader.cpp  PartMapLoader.h  PartMotion.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
